Added a publishing workflow

--- a/dendron.yml
+++ b/dendron.yml
@@ -101,3 +101,5 @@ publishing:
         action: useVault
         payload:
             - vault
+site:
+    siteUrl: https://deeparthgupta.github.io
