--- a/dendron.yml
+++ b/dendron.yml
@@ -19,6 +19,7 @@ commands:
     insertNoteIndex:
         enableMarker: false
     copyNoteLink: {}
+    templateHierarchy: template
 workspace:
     vaults:
         -
@@ -52,9 +53,13 @@ workspace:
             L: low
         todoIntegration: false
         createTaskSelectionType: selection2link
+        taskCompleteStatus:
+            - done
+            - x       
     graph:
         zoomSpeed: 1
-    enableAutoCreateOnDefinition: false
+        createStub: false
+    enableAutoCreateOnDefinition: true
     enableXVaultWikiLink: false
     enableRemoteVaultInit: true
     enableUserTags: true
@@ -64,6 +69,10 @@ workspace:
     enableEditorDecorations: true
     maxPreviewsCached: 10
     maxNoteLength: 204800
+    enableHandlebarTemplates: true
+    enableFullHierarchyNoteTitle: false
+    enableSmartRefs: false
+    dendronVersion: 0.83.0
 preview:
     enableFMTitle: true
     enableNoteTitleForLink: true
@@ -72,7 +81,7 @@ preview:
     enableMermaid: true
     enablePrettyRefs: true
     enableKatex: true
-    automaticallyShowPreview: false
+    automaticallyShowPreview: true
 publishing:
     enableFMTitle: true
     enableNoteTitleForLink: true
@@ -101,5 +110,5 @@ publishing:
         action: useVault
         payload:
             - vault
-site:
+    enableTaskNotes: true
     siteUrl: https://deeparthgupta.github.io
